--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -12,7 +12,7 @@
     <div class="offset-md-2 col-lg-9">
       <div class="page-header">
         <h1>
-          Todo List - Modified once again with agent node 1 and 2 successfully....
+          Todo List - modified pipeline by Anuj Saini on both node
         </h1>
       </div>
     </div>
